--- a/examples/actix_subscriptions/Cargo.toml
+++ b/examples/actix_subscriptions/Cargo.toml
@@ -9,7 +9,8 @@ publish = false
 actix-web = "3.3"
 actix-cors = "0.5"
 futures = "0.3"
-tokio = { version = "0.2", features = ["macros", "rt-core"] }
+tokio = { version = "1.0.2", features = ["rt", "rt-multi-thread", "macros", "time"] }
+tokio-stream = "0.1.2"
 env_logger = "0.8"
 serde = "1.0"
 serde_json = "1.0"
