--- a/examples/warp_subscriptions/Cargo.toml
+++ b/examples/warp_subscriptions/Cargo.toml
@@ -10,7 +10,8 @@ futures = "0.3.1"
 log = "0.4.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "0.2", features = ["rt-core", "macros"] }
+tokio = { version = "1.0.2", features = ["rt", "rt-multi-thread", "macros", "time"] }
+tokio-stream = "0.1.2"
 warp = "0.2.1"
 
 juniper = { path = "../../juniper" }
