--- a/juniper_actix/Cargo.toml
+++ b/juniper_actix/Cargo.toml
@@ -12,9 +12,9 @@ repository = "https://github.com/graphql-rust/juniper"
 subscriptions = ["juniper_graphql_ws"]
 
 [dependencies]
-actix = "0.10"
-actix-web = "3.3"
-actix-web-actors = "3.0"
+actix = "0.11.0-beta.1"
+actix-web = "4.0.0-beta.1"
+actix-web-actors = "4.0.0-beta.1"
 
 juniper = { version = "0.15.3", path = "../juniper", default-features = false }
 juniper_graphql_ws = { version = "0.2.3", path = "../juniper_graphql_ws", optional = true }
